_sass/header.scss
$post-brand-link-base: #000;
$post-brand-link-hover: #94a7c3;

$brand-font-size: 1.5rem;

.header-wrapper
{
    margin-top: $unit-one;
    margin-bottom: $unit-two;
}

.header-wrapper .logo
{
    display: inline-block;

    border-radius: 50px;

    background-image: url('/assets/placeholder-author.png');
    background-size: 75px;
    background-position: top;

    width: 75px;
    height: 75px;

    position: relative;
    top: 28px;
    
    margin-right: 20px;
}

.header-wrapper .brand,
.header-wrapper .post-brand
{
    display: inline-block;
    font-size: $brand-font-size;
    font-weight: 700;
    letter-spacing: -0.01rem;
}

.header-wrapper .brand a:link,
.header-wrapper .brand a:active,
.header-wrapper .brand a:visited,
.header-wrapper .brand a:hover
{
    color: $post-brand-link-base;
    text-decoration: none;
}

.header-wrapper .post-brand a:link,
.header-wrapper .post-brand a:active,
.header-wrapper .post-brand a:visited
{
    color: $post-brand-link-base;
    text-decoration: none;
}


.header-wrapper .post-brand a:hover
{
    color: $post-brand-link-hover;
    text-decoration: none;
}

@media (max-width: 1199.98px)
{
    .header-wrapper .logo
    {
        right: 20px;
    }
}

@media (max-width: 991.98px)
{
    .header-wrapper
    {
        margin-bottom: $unit-two;
    }

    .header-wrapper .logo
    {
        right: 0px;
    }
}

@media (max-width: 575.98px)
{
    .header-wrapper
    {
        margin-bottom: $unit-half;
    }

    .header-wrapper .logo
    {
        display: none;
        visibility: hidden;
    }
}

